--- a/settings.conf
+++ b/settings.conf
@@ -3,24 +3,24 @@
 ---
 modules-search: [ local ]
 
-instances:
-- id:       kernel
-  module:   netinstall
-  config:   netinstall-kernel.conf
-- id:       desktop
-  module:   netinstall
-  config:   netinstall-desktop.conf
-- id:       applications
-  module:   netinstall
-  config:   netinstall-applications.conf
+# instances:
+# - id:       kernel
+#   module:   netinstall
+#   config:   netinstall-kernel.conf
+# - id:       desktop
+#   module:   netinstall
+#   config:   netinstall-desktop.conf
+# - id:       applications
+#   module:   netinstall
+#   config:   netinstall-applications.conf
 
 sequence:
 - show:
   - welcome
-  # - netinstall
-  - netinstall@kernel
-  - netinstall@desktop
-  - netinstall@applications
+  - netinstall
+  # - netinstall@kernel
+  # - netinstall@desktop
+  # - netinstall@applications
   - locale
   - keyboard
   - partition
@@ -45,7 +45,7 @@ sequence:
   - users
   - hwclock
   # - services-systemd
-  # - shellprocess
+  - shellprocess
   - displaymanager
   - grubcfg
   - bootloader
