--- a/src/modules/netinstall/netinstall.yaml
+++ b/src/modules/netinstall/netinstall.yaml
@@ -1,377 +1,319 @@
-- name: "Base-devel + Common packages"
-  description: "Recommended. Don't change unless you know what you're doing. Base-devel group and some other commom utilities (generic)"
-  hidden: false
-  selected: true
+- name: "Kernel & Drivers"
+  description: "Install Kernel & Drivers"
   critical: false
-  packages:
-    - base-devel
-    - yay
-    - linux-headers
-    - linux-firmware
-    - pacman-contrib
-    - xf86-video-vesa
-    - xorg-server
-    - xorg-xinit
-    - xf86-input-libinput
-    - xf86-video-amdgpu
-    - xf86-video-ati
-    - xf86-video-fbdev
-    - xf86-video-intel
-    - xorg-xkill
-    - xorg-xrandr
-    - xorg-xinput
-    - xorg-xrandr
-    - xdg-utils
-    - xdg-user-dirs
-    - xdg-user-dirs-gtk
-    - gvfs
-    - gvfs-mtp
-    - gvfs-afc
-    - gvfs-goa
-    - gvfs-google
-    - gvfs-gphoto2
-    - gvfs-nfs
-    - gvfs-smb
-    - accountsservice
-    - smartmontools
-    - libwnck3
-    - b43-fwcutter
-    - broadcom-wl-dkms
-    - dnsutils
-    - ipw2100-fw
-    - ipw2200-fw
-    - modemmanager
-    - netctl
-    - net-tools
-    - ntfs-3g
-    - networkmanager
-    - networkmanager-openvpn
-    - nss-mdns
-    - usb_modeswitch
-    - whois
-    - dhclient
-    - ethtool
-    - openconnect
-    - openvpn
-    - rp-pppoe
-    - wireless-regdb
-    - wireless_tools
-    - wpa_supplicant
-    - wvdial
-    - gnu-netcat
-    - iwd
-    - linux-atm
-    - ndisc6
-    - ppp
-    - pptpclient
-    - vpnc
-    - xl2tpd
-    - dialog
-    - dnsmasq
-    - upower
-    - hwinfo
-    - gtop
-    - python
-    - solid
-    - mlocate
-    - ttf-dejavu
-    - gnu-free-fonts
-    - ttf-liberation
-    - ttf-bitstream-vera
-    - ttf-ubuntu-font-family
-    - cantarell-fonts
-    - noto-fonts
-    - noto-fonts-cjk
-    - ttf-croscore
-    - ttf-carlito
-    - ttf-caladea
-    - firefox
-    - alsa-utils
-    - alsa-plugins
-    - alsa-firmware
-    - hardinfo
-    - glances
-    - htop
-    - screenfetch
-    - neofetch
-    - pulseaudio
-    - pavucontrol
-    - paprefs
-    - ffmpegthumbnailer
-    - poppler-glib
-    - libgsf
-    - libopenraw
-    - freetype2
-    - gst-libav
-    - gst-plugins-bad
-    - gst-plugins-ugly
-    - mplayer
-    - libdvdcss
-    - efibootmgr
-    - dosfstools
-    - mtools
-    - openssh
-    - intel-ucode
-    - amd-ucode
-    - os-prober
-    - grub-tools
-    - wget
-    - bash-completion
-    - lsb-release
-    - pcurses
-    - s-tui
-    - tlp
-    - yad
-    - reflector
-    - endeavouros-theming
-    - welcome
-    - eos-update-notifier
-    - nvidia-installer-dkms
-    - mkinitcpio-openswap
-- name: "XFCE4-Desktop"
-  description: "XFCE4 - lightweight desktop fast and low on system resources, visually appealing and user friendly."
   hidden: false
   selected: false
+  subgroups:
+  - name: "Linux-lts"
+    description: "Install linux-lts kernel"
+    critical: false
+    hidden: false
+    selected: false
+    packages:
+      - linux-lts
+      - linux-lts-headers
+  - name: "Linux-zen"
+    description: "Install linux-zen kernel"
+    critical: false
+    hidden: false
+    selected: false
+    packages:
+      - linux-zen
+      - linux-zen-headers
+  - name: "Nvidia"
+    description: "Install nvidia"
+    critical: false
+    hidden: false
+    selected: false
+    packages:
+      - nvidia
+      - nvidia-settings
+      - nvidia-utils
+  - name: "Nvidia-lts"
+    description: "Install nvidia-lts"
+    critical: false
+    hidden: false
+    selected: false
+    packages:
+      - nvidia-lts
+      - nvidia-settings
+      - nvidia-utils
+
+- name: "Desktop environment"
+  description: "Install Desktop environment"
   critical: false
-  packages:
-    - xfce4
-    - mousepad
-    - orage
-    - parole
-    - ristretto
-    - thunar-archive-plugin
-    - thunar-media-tags-plugin
-    - xfce4-battery-plugin
-    - xfce4-datetime-plugin
-    - xfce4-mount-plugin
-    - xfce4-netload-plugin
-    - xfce4-notifyd
-    - xfce4-pulseaudio-plugin
-    - xfce4-screensaver
-    - xfce4-screenshooter
-    - xfce4-taskmanager
-    - xfce4-wavelan-plugin
-    - xfce4-weather-plugin
-    - xfce4-whiskermenu-plugin
-    - xfce4-xkb-plugin
-    - file-roller
-    - network-manager-applet
-    - leafpad
-    - epdfview
-    - galculator
-    - blueberry
-    - lightdm
-    - lightdm-gtk-greeter
-    - lightdm-gtk-greeter-settings
-    - arc-x-icons-theme
-    - capitaine-cursors
-    - arc-gtk-theme
-    - gnome-packagekit
-- name: "MATE-Desktop"
-  description: "MATE Desktop - the continuation of GNOME 2"
   hidden: false
   selected: false
+  subgroups:
+  - name: "Xfce"
+    description: "Desktop environment"
+    critical: false
+    hidden: false
+    selected: false
+    expanded: true
+    packages:
+      - xfce4
+      - galculator
+      - mousepad
+      - xfce4-battery-plugin
+      - xfce4-mount-plugin
+      - xfce4-netload-plugin
+      - xfce4-notifyd
+      - xfce4-pulseaudio-plugin
+      - xfce4-screensaver
+      - xfce4-taskmanager
+      - xfce4-weather-plugin
+      - xfce4-whiskermenu-plugin
+      - xfce4-xkb-plugin
+      - network-manager-applet
+  - name: "Mate"
+    description: "Desktop environment"
+    hidden: false
+    selected: false
+    critical: false
+    packages:
+      - mate
+      - mate-extra
+      - celluloid
+      - network-manager-applet
+  - name: "KDE Plasma"
+    description: "Desktop environment"
+    hidden: false
+    selected: false
+    critical: false
+    packages:
+      - plasma
+      - packagekit-qt5
+      - kdeconnect
+      - fwupd
+      - python-dbus
+      - kdebase-meta
+      - python-dbus
+      - gwenview
+      - ark
+      - okular
+  - name: "GNOME"
+    description: "Desktop environment"
+    hidden: false
+    selected: false
+    critical: false
+    packages:
+      - gnome
+      - gnome-tweaks
+      - nautilus-sendto
+      - gnome-nettool
+      - gnome-usage
+      - gnome-multi-writer
+      - adwaita-icon-theme
+      - chrome-gnome-shell
+      - gnome-software-packagekit-plugin
+      - gnome-packagekit
+      - fwupd
+  - name: "Cinnamon"
+    description: "Desktop environment"
+    hidden: false
+    selected: false
+    critical: false
+    packages:
+      - cinnamon
+      - cinnamon-translations
+      - gnome-terminal
+      - gnome-system-monitor
+      - gpicview-gtk3
+      - celluloid
+      - x-apps
+      - nemo-fileroller
+      - nemo-image-converter
+      - nemo-preview
+      - nemo-seahorse
+      - nemo-share
+  - name: "Budgie"
+    description: "Desktop environment"
+    hidden: false
+    selected: false
+    critical: false
+    packages:
+      - budgie-desktop
+      - gnome
+      - network-manager-applet
+      - fwupd
+  - name: "Deepin"
+    description: "Desktop environment"
+    hidden: false
+    selected: false
+    critical: false
+    packages:
+      - deepin
+      - deepin-extra
+  - name: "Openbox"
+    description: "Window manager"
+    hidden: false
+    selected: false
+    critical: false
+    packages:
+      - openbox
+      - obconf
+      - lxappearance-obconf
+      - lxinput
+      - lxrandr
+      - arandr
+  - name: "Lxqt"
+    description: "Desktop environment"
+    hidden: false
+    selected: false
+    critical: false
+    packages:
+      - lxqt
+      - xdg-utils
+      - libpulse
+      - libstatgrab
+      - libsysstat
+      - lm_sensors
+      - network-manager-applet
+      - oxygen-icons
+      - breeze
+      - breeze-gtk
+      - pavucontrol-qt
+  - name: "i3"
+    description: "Tiling window manager"
+    hidden: true
+    selected: false
+    critical: false
+    packages:
+      - i3-wm
+      - network-manager-applet
+      - arandr
+      - archlinux-xdg-menu
+      - lxappearance-gtk3
+      - polkit-gnome
+      - pcmanfm
+
+- name: "Applications"
+  description: "Install Applications"
   critical: false
-  packages:
-    - mate
-    - mate-extra
-    - celluloid
-    - network-manager-applet
-    - lightdm
-    - lightdm-gtk-greeter
-    - lightdm-gtk-greeter-settings
-    - gnome-packagekit
-    - arc-x-icons-theme
-    - arc-gtk-theme
-- name: "KDE-Desktop"
-  description: "KDE-Plasma Desktop - Simple by default, powerful when needed."
   hidden: false
   selected: false
-  critical: false
-  packages:
-    - plasma
-    - packagekit-qt5
-    - kdeconnect
-    - fwupd
-    - python-dbus
-    - kdebase-meta
-    - python-dbus
-    - gwenview
-    - ark
-    - okular
-- name: "GNOME-Desktop"
-  description: "GNOME Desktop - designed to put you in control and get things done. "
-  hidden: false
-  selected: false
-  critical: false
-  packages:
-    - gnome
-    - gnome-tweaks
-    - nautilus-sendto
-    - gnome-nettool
-    - gnome-usage
-    - gnome-multi-writer
-    - adwaita-icon-theme
-    - chrome-gnome-shell
-    - gnome-software-packagekit-plugin
-    - gnome-packagekit
-    - fwupd
-    - arc-x-icons-theme
-    - arc-gtk-theme
-- name: "Cinnamon-Desktop"
-  description: "Cinnamon Desktop - advanced innovative features and a traditional user experience."
-  hidden: false
-  selected: false
-  critical: false
-  packages:
-    - cinnamon
-    - blueberry
-    - cinnamon-translations
-    - gnome-terminal
-    - gnome-system-monitor
-    - gpicview-gtk3
-    - celluloid
-    - x-apps
-    - file-roller
-    - lightdm
-    - lightdm-gtk-greeter
-    - lightdm-gtk-greeter-settings
-    - nemo-fileroller
-    - nemo-image-converter
-    - nemo-preview
-    - nemo-seahorse
-    - nemo-share
-    - gnome-screenshot
-    - gnome-calculator
-    - gnome-packagekit
-    - arc-x-icons-theme
-    - arc-gtk-theme
-- name: "Budgie-Desktop"
-  description: "Budgie - I Tawt I Taw A Purdy Desktop"
-  hidden: false
-  selected: false
-  critical: false
-  packages:
-    - budgie-desktop
-    - gnome
-    - gnome-screensaver
-    - lightdm
-    - lightdm-gtk-greeter
-    - lightdm-gtk-greeter-settings
-    - network-manager-applet
-    - gnome-software-packagekit-plugin
-    - gnome-packagekit
-    - fwupd
-    - arc-x-icons-theme
-    - arc-gtk-theme
-- name: "Deepin-Desktop"
-  description: "Deepin Desktop - beautiful, easy to use, safe and reliable. "
-  hidden: false
-  selected: false
-  critical: false
-  packages:
-    - deepin
-    - deepin-extra
-    - lightdm
-    - lightdm-gtk-greeter
-    - lightdm-gtk-greeter-settings
-    - file-roller
-- name: "i3 Window Manager"
-  description: "i3 tiling window manager, primarily targeted at developers and advanced users. "
-  hidden: true
-  selected: false
-  critical: false
-  packages:
-    - i3-wm
-    - i3blocks
-    - i3lock
-    - i3status
-    - network-manager-applet
-    - arandr
-    - archlinux-xdg-menu
-    - lxappearance-gtk3
-    - otf-font-awesome
-    - dmenu
-    - script
-    - polkit-gnome
-    - pcmanfm
-    - terminator
-    - lightdm
-    - lightdm-gtk-greeter
-    - lightdm-gtk-greeter-settings
-- name: "LXQT-Desktop"
-  description: "The Lightweight Qt Desktop Environment."
-  hidden: false
-  selected: false
-  critical: false
-  packages:
-    - lxqt
-    - xdg-utils
-    - sddm
-    - libpulse
-    - libstatgrab
-    - libsysstat
-    - lm_sensors
-    - network-manager-applet
-    - oxygen-icons
-    - breeze
-    - breeze-gtk
-    - notepadqq
-    - smplayer
-    - pavucontrol-qt
-    - xscreensaver
-- name: "Openbox"
-  description: "Openbox is a highly configurable, next generation window manager with extensive standards support."
-  hidden: true
-  selected: false
-  critical: false
-  packages:
-    - openbox
-    - obconf
-    - lxappearance-obconf
-    - lxinput
-    - lxrandr
-    - arandr
-    - menumaker
-    - archlinux-xdg-menu
-    - lightdm
-    - lightdm-gtk-greeter
-    - lightdm-gtk-greeter-settings
-- name: "Printing-Support"
-  description: "Support for printing (Cups)"
-  hidden: false
-  selected: false
-  critical: false
-  packages:
-    - cups
-    - cups-filters
-    - cups-pdf
-    - ghostscript
-    - gsfonts
-    - foomatic-db-engine
-    - foomatic-db
-    - foomatic-db-ppds
-    - foomatic-db-nonfree
-    - foomatic-db-nonfree-ppds
-    - gutenprint
-    - foomatic-db-gutenprint-ppds
-    - system-config-printer
-    - hplip
-    - splix
-- name: "Accessibility Tools"
-  description: "Screen reader and mouse tweak"
-  hidden: false
-  selected: false
-  critical: false
-  packages:
-    - orca
-    - mousetweaks
-- name: "Nvidia Drivers"
-  description: "Proprietary Nvidia Driver: not for legacy or hybrid cards!"
-  hidden: false
-  selected: true
-  critical: false
-  packages:
-    - nvidia
-    - nvidia-settings
-    - lib32-nvidia-utils
+  subgroups:
+  - name: "Internet"
+    description: "Internet software"
+    critical: false
+    hidden: false
+    selected: false
+    expanded: true
+    packages:
+      - firefox-i18n-$LOCALE
+      - chromium
+      - brave
+      - opera
+      - qutebrowser
+      - tor-browser
+      - hexchat
+      - telegram-desktop
+      - pidgin
+      - falkon
+      - filezilla
+      - geary
+      - deluge
+      - qbittorrent
+      - thunderbird
+      - transmission-gtk
+      - ktorrent
+      - insync
+  - name: "Terminals"
+    description: "Terminals"
+    critical: false
+    hidden: false
+    selected: false
+    packages:
+      - alacritty
+      - gnome-terminal
+      - guake
+      - kitty
+      - konsole
+      - lxterminal
+      - sakura
+      - termite
+      - terminator
+      - tilix
+      - tilda
+  - name: "File Manager"
+    description: "Filemanager"
+    critical: false
+    hidden: false
+    selected: false
+    packages:
+      - caja
+      - dolphin
+      - nautilus
+      - nemo
+      - nemo-fileroller
+      - pcmanfm
+  - name: "Password Manager"
+    description: "Password manager"
+    critical: false
+    hidden: false
+    selected: false
+    packages:
+      - bitwarden-bin
+      - enpass-bin
+      - keepassxc
+      - lastpass
+  - name: "Fonts"
+    description: "Fonts"
+    critical: false
+    hidden: false
+    selected: false
+    packages:
+      - terminus-font
+      - noto-fonts-emoji
+  - name: "Dev Tools"
+    description: "Development"
+    critical: false
+    hidden: false
+    selected: false
+    packages:
+      - code
+      - neovim
+      - emacs
+      - gitahead-bin
+      - gitg
+      - gitfiend
+      - gitkraken
+  - name: "Graphics"
+    description: "Graphics"
+    critical: false
+    hidden: false
+    selected: false
+    packages:
+      - blender
+      - darktable
+      - digikam
+      - krita
+      - pinta
+  - name: "Usb"
+    description: "Usb"
+    critical: false
+    hidden: false
+    selected: false
+    packages:
+      - etcher-bin
+      - imagewriter
+      - woeusb
+  - name: "Virtualbox"
+    description: "Install virtualbox"
+    critical: false
+    hidden: false
+    selected: false
+    packages:
+      - virtualbox
+      - virtualbox-host-dkms
+  - name: "Accessories"
+    description: "Accessories"
+    critical: false
+    hidden: false
+    selected: false
+    packages:
+    - cheese
+    - liferea
+    - mediainfo
+    - mcomix
