--- a/src/modules/shellprocess/shellprocess.conf
+++ b/src/modules/shellprocess/shellprocess.conf
@@ -2,4 +2,8 @@
 dontChroot: false
 timeout: 10
 script:
-    - command : "/usr/bin/cleaner.sh"
+    - "-/usr/bin/cleaner.sh"
+    # - "-touch @@ROOT@@/tmp/thingy"
+    # - "/usr/bin/false"
+    # - command: "/usr/local/bin/slowloris"
+      # timeout: 3600
