--- a/settings.conf
+++ b/settings.conf
@@ -44,7 +44,7 @@ sequence:
   - users
   - hwclock
   # - services-systemd
-  # - shellprocess
+  - shellprocess
   - packages
   - displaymanager
   - grubcfg
