--- a/src/modules/packages/packages.conf
+++ b/src/modules/packages/packages.conf
@@ -6,7 +6,7 @@ update_system: false
 
 operations:
   - try_remove:
-    - calamares
+    - calamares-net
     - ckbcomp
     - mkinitcpio-openswap
   # - install:
