--- a/src/modules/packages/packages.conf
+++ b/src/modules/packages/packages.conf
@@ -9,5 +9,6 @@ operations:
     - calamares-net
     - ckbcomp
     - mkinitcpio-openswap
+    - ctlos-xfce-skel
   # - install:
   #   - intel-ucode
