--- a/src/modules/netinstall/netinstall.yaml
+++ b/src/modules/netinstall/netinstall.yaml
@@ -234,6 +234,7 @@
       - transmission-gtk
       - ktorrent
       - insync
+      - wireshark-qt
   - name: "Terminals"
     description: "Terminals"
     critical: false
