--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -64,12 +64,12 @@ package() {
     install -Dm644 "../data/49-nopasswd-calamares.rules" "$pkgdir/etc/polkit-1/rules.d/49-nopasswd-calamares.rules"
     chmod 750 "$pkgdir"/etc/polkit-1/rules.d
 
-    cp -r "../settings-{on,off}line.conf" "$pkgdir/usr/share/calamares/"
-    cp -r "../src/modules/packages/packages-{on,off}line.conf" "$pkgdir/usr/share/calamares/modules/"
-    cp -r "../src/modules/welcome/welcome-{on,off}line.conf" "$pkgdir/usr/share/calamares/modules/"
+    cp -r ../settings-{on,off}line.conf $pkgdir/usr/share/calamares/
+    cp -r ../src/modules/packages/packages-{on,off}line.conf $pkgdir/usr/share/calamares/modules/
+    cp -r ../src/modules/welcome/welcome-{on,off}line.conf $pkgdir/usr/share/calamares/modules/
 
 
-    cp -r "../src/modules/netinstall/netinstall.yaml" "$pkgdir/usr/share/calamares/modules/netinstall.yaml"
+    cp -r ../src/modules/netinstall/netinstall.yaml $pkgdir/usr/share/calamares/modules/netinstall.yaml
     # cp -r "../src/modules/netinstall/netinstall-kernel.yaml" "$pkgdir/usr/share/calamares/modules/netinstall-kernel.yaml"
     # cp -r "../src/modules/netinstall/netinstall-desktop.yaml" "$pkgdir/usr/share/calamares/modules/netinstall-desktop.yaml"
     # cp -r "../src/modules/netinstall/netinstall-applications.yaml" "$pkgdir/usr/share/calamares/modules/netinstall-applications.yaml"
